# kanban

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/testApp/: .env  config.py  docker-compose.yml  main.py  pyproject.toml
backend/testApp/auth/: utils.py
backend/testApp/certs/: jwt-private.pem  jwt-public.pem
backend/testApp/db/: db.py
backend/testApp/migrations/: env.py
backend/testApp/migrations/versions/: 2025_02_02_1925-4c6f4b2050f6_database_creation.py  2025_02_08_2348-30d936b4d1e3_database_creation.py
backend/testApp/models/: __init__.py  base.py  user.py
backend/testApp/repository/: __init__.py  user.py
backend/testApp/routers/: login.py  user.py  user_registration.py
backend/testApp/schemas/token/: token.py
backend/testApp/schemas/user/: user.py
backend/testApp/services/: user.py
backend/testApp/testapp/: dependencies.py
backend/testApp/utils/: repository.py
my-react-app/: 1.txt  package-lock.json  package.json
my-react-app/src/: App.js
my-react-app/src/components/UI/: RegistForm.jsx
